# nabla

./: .gitignore  Cargo.toml  README.md
datasets/: mnist_test  mnist_test_labels.nab
src/: lib.rs  nab_activations.rs  nab_array.rs  nab_functions.rs  nab_io.rs  nab_layers.rs  nab_loss.rs  nab_math.rs  nab_mnist.rs  nab_model.rs  nab_optimizers.rs  nab_regression.rs  nab_utils.rs  nabla.rs
