[package]
name = "nabla-ml"
version = "0.4.3"
authors = ["Enrico Zanardo <enrico.zanardo101@gmail.com>"]
edition = "2021"
description = "A numpy-like library for Rust"
license = "AGPL-3.0"
documentation = "https://docs.rs/stellab"
homepage = "https://stellab.it"
repository = "https://github.com/enricozanardo/nabla.git"

[dependencies]
# Add any dependencies your library needs here
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0" 
flate2 = "1.0"
bincode = "1.3"
byteorder = "1.4"
csv = "1.2"
serde_json = "1.0"